Working on Footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>¯\(°_o)/¯ </title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="container">
@@ -16,15 +16,23 @@
             <i class="material-icons">data_usage</i>
         </div>
     </div>
+    <footer class="footer-container">
+        <a class="footer-social-media" target="_blank" href="https://github.com/developerstogether">
+            <object data="./image/social_media_github.svg" type="image/svg+xml"></object>
+        </a>
+        <a class="footer-social-media" target="_blank" href="https://www.linkedin.com/in/docoding/">
+            <object data="./image/social_media_linkedin.svg" type="image/svg+xml"></object>
+        </a>
+    </footer>
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
     </script>
     <script>
-        // $(document).ready(function(){
-        // $('body div').last().remove();
-        // });
+        $(document).ready(function(){
+        $('body div').last().remove();
+        });
 
     </script>
 </body>
