Working on Footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <i class="material-icons">data_usage</i>
         </div>
     </div>
-    <footer class="footer-container">
+    <footer>
         <a class="footer-social-media" target="_blank" href="https://github.com/developerstogether">
             <object data="./image/social_media_github.svg" type="image/svg+xml"></object>
         </a>
@@ -30,9 +30,9 @@
         crossorigin="anonymous">
     </script>
     <script>
-        $(document).ready(function(){
-        $('body div').last().remove();
-        });
+        // $(document).ready(function(){
+        // $('body div').last().remove();
+        // });
 
     </script>
 </body>
