--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,41 +10,71 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Coming Soon.</h1>
+        
         <div id="loading-container">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" style="enable-background:new 0 0 50 50;"
+                xml:space="preserve">
                 <rect x="0" y="0" width="4" height="7" fill="#FFF">
-                  <animateTransform  attributeType="xml"
-                    attributeName="transform" type="scale"
-                    values="1,1; 1,3; 1,1"
-                    begin="0s" dur="0.6s" repeatCount="indefinite" />
+                    <animateTransform attributeType="xml" attributeName="transform" type="scale" values="1,1; 1,3; 1,1"
+                        begin="0s" dur="0.6s" repeatCount="indefinite" />
                 </rect>
 
                 <rect x="10" y="0" width="4" height="7" fill="#FFF">
-                  <animateTransform  attributeType="xml"
-                    attributeName="transform" type="scale"
-                    values="1,1; 1,3; 1,1"
-                    begin="0.2s" dur="0.6s" repeatCount="indefinite" />
+                    <animateTransform attributeType="xml" attributeName="transform" type="scale" values="1,1; 1,3; 1,1"
+                        begin="0.2s" dur="0.6s" repeatCount="indefinite" />
                 </rect>
                 <rect x="20" y="0" width="4" height="7" fill="#FFF">
-                  <animateTransform  attributeType="xml"
-                    attributeName="transform" type="scale"
-                    values="1,1; 1,3; 1,1"
-                    begin="0.4s" dur="0.6s" repeatCount="indefinite" />
+                    <animateTransform attributeType="xml" attributeName="transform" type="scale" values="1,1; 1,3; 1,1"
+                        begin="0.4s" dur="0.6s" repeatCount="indefinite" />
                 </rect>
-              </svg>
+            </svg>
         </div>
         <div class="social-media-container">
             <a class="social-media-icon" target="_blank" href="https://github.com/devdotname">
-                <svg enable-background="new 0 0 64 64" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Layer_3"><g><g><path d="M32.001,63.251c-17.23,0-31.25-14.02-31.25-31.25s14.02-31.25,31.25-31.25s31.25,14.02,31.25,31.25     S49.231,63.251,32.001,63.251z" fill="#212121"/><path d="M32,1.5c16.818,0,30.5,13.682,30.5,30.5S48.818,62.5,32,62.5S1.5,48.818,1.5,32S15.182,1.5,32,1.5 M32,0     C14.327,0,0,14.327,0,32c0,17.673,14.327,32,32,32s32-14.327,32-32C64,14.327,49.673,0,32,0L32,0z" fill="#212121"/></g></g><g><g id="Outline_Filled_5_"><path d="M38.592,50.166h-4.84h-4.844c0,0,0.014-2.874,0-4.844c-6.629,1.428-8.479-3.633-8.479-3.633     c-1.21-2.423-2.423-3.633-2.423-3.633c-2.423-1.438,0-1.21,0-1.21c2.423,0,3.633,2.423,3.633,2.423     c2.126,3.609,5.908,3.028,7.266,2.423c0-1.21,0.53-3.042,1.21-3.633c-5.29-0.595-9.693-3.633-9.693-9.689     s1.216-7.266,2.427-8.479c-0.244-0.597-1.259-2.805,0.037-6.056c0,0,2.38,0,4.803,3.633c1.2-1.2,4.844-1.21,6.056-1.21     c1.208,0,4.854,0.01,6.054,1.21c2.423-3.633,4.809-3.633,4.809-3.633c1.296,3.251,0.282,5.459,0.037,6.056     c1.21,1.21,2.423,2.423,2.423,8.479s-4.397,9.092-9.689,9.689c0.682,0.591,1.21,2.675,1.21,3.633L38.592,50.166L38.592,50.166z" fill="#FFF" id="Cat_1_"/></g></g></g></svg>
+                <svg enable-background="new 0 0 64 64" version="1.1" viewBox="0 0 64 64" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g id="Layer_3">
+                        <g>
+                            <g>
+                                <path d="M32.001,63.251c-17.23,0-31.25-14.02-31.25-31.25s14.02-31.25,31.25-31.25s31.25,14.02,31.25,31.25     S49.231,63.251,32.001,63.251z"
+                                    fill="#212121" />
+                                <path d="M32,1.5c16.818,0,30.5,13.682,30.5,30.5S48.818,62.5,32,62.5S1.5,48.818,1.5,32S15.182,1.5,32,1.5 M32,0     C14.327,0,0,14.327,0,32c0,17.673,14.327,32,32,32s32-14.327,32-32C64,14.327,49.673,0,32,0L32,0z"
+                                    fill="#212121" />
+                            </g>
+                        </g>
+                        <g>
+                            <g id="Outline_Filled_5_">
+                                <path d="M38.592,50.166h-4.84h-4.844c0,0,0.014-2.874,0-4.844c-6.629,1.428-8.479-3.633-8.479-3.633     c-1.21-2.423-2.423-3.633-2.423-3.633c-2.423-1.438,0-1.21,0-1.21c2.423,0,3.633,2.423,3.633,2.423     c2.126,3.609,5.908,3.028,7.266,2.423c0-1.21,0.53-3.042,1.21-3.633c-5.29-0.595-9.693-3.633-9.693-9.689     s1.216-7.266,2.427-8.479c-0.244-0.597-1.259-2.805,0.037-6.056c0,0,2.38,0,4.803,3.633c1.2-1.2,4.844-1.21,6.056-1.21     c1.208,0,4.854,0.01,6.054,1.21c2.423-3.633,4.809-3.633,4.809-3.633c1.296,3.251,0.282,5.459,0.037,6.056     c1.21,1.21,2.423,2.423,2.423,8.479s-4.397,9.092-9.689,9.689c0.682,0.591,1.21,2.675,1.21,3.633L38.592,50.166L38.592,50.166z"
+                                    fill="#FFF" id="Cat_1_" />
+                            </g>
+                        </g>
+                    </g>
+                </svg>
             </a>
             <a class="social-media-icon" target="_blank" href="https://www.linkedin.com/in/docoding/">
-                <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Flat_copy"><g><g><path d="M16.005,31.614c-8.615,0-15.625-7.01-15.625-15.625S7.39,0.364,16.005,0.364S31.63,7.374,31.63,15.989     S24.62,31.614,16.005,31.614z" fill="#212121"/><path d="M16.005,0.739c8.409,0,15.25,6.841,15.25,15.25s-6.841,15.25-15.25,15.25s-15.25-6.841-15.25-15.25     S7.596,0.739,16.005,0.739 M16.005-0.011c-8.837,0-16,7.163-16,16c0,8.836,7.163,16,16,16s16-7.164,16-16     C32.005,7.153,24.842-0.011,16.005-0.011L16.005-0.011z" fill="#212121"/></g></g><path d="M24.299,22.932v-6.137c0-3.288-1.755-4.818-4.096-4.818c-1.889,0-2.735,1.039-3.206,1.768v-1.517h-3.558   c0.047,1.005,0,10.704,0,10.704h3.558v-5.978c0-0.319,0.023-0.639,0.117-0.867c0.257-0.639,0.842-1.301,1.825-1.301   c1.288,0,1.803,0.981,1.803,2.42v5.727L24.299,22.932L24.299,22.932z M9.69,10.767c1.24,0,2.013-0.823,2.013-1.85   c-0.023-1.05-0.773-1.849-1.99-1.849S7.701,7.866,7.701,8.916c0,1.028,0.772,1.85,1.967,1.85H9.69z M11.469,22.932V12.228H7.912   v10.704H11.469z" fill="#FFF"/></g></svg>
+                <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g id="Flat_copy">
+                        <g>
+                            <g>
+                                <path d="M16.005,31.614c-8.615,0-15.625-7.01-15.625-15.625S7.39,0.364,16.005,0.364S31.63,7.374,31.63,15.989     S24.62,31.614,16.005,31.614z"
+                                    fill="#212121" />
+                                <path d="M16.005,0.739c8.409,0,15.25,6.841,15.25,15.25s-6.841,15.25-15.25,15.25s-15.25-6.841-15.25-15.25     S7.596,0.739,16.005,0.739 M16.005-0.011c-8.837,0-16,7.163-16,16c0,8.836,7.163,16,16,16s16-7.164,16-16     C32.005,7.153,24.842-0.011,16.005-0.011L16.005-0.011z"
+                                    fill="#212121" />
+                            </g>
+                        </g>
+                        <path d="M24.299,22.932v-6.137c0-3.288-1.755-4.818-4.096-4.818c-1.889,0-2.735,1.039-3.206,1.768v-1.517h-3.558   c0.047,1.005,0,10.704,0,10.704h3.558v-5.978c0-0.319,0.023-0.639,0.117-0.867c0.257-0.639,0.842-1.301,1.825-1.301   c1.288,0,1.803,0.981,1.803,2.42v5.727L24.299,22.932L24.299,22.932z M9.69,10.767c1.24,0,2.013-0.823,2.013-1.85   c-0.023-1.05-0.773-1.849-1.99-1.849S7.701,7.866,7.701,8.916c0,1.028,0.772,1.85,1.967,1.85H9.69z M11.469,22.932V12.228H7.912   v10.704H11.469z"
+                            fill="#FFF" />
+                    </g>
+                </svg>
             </a>
         </div>
+        <button class="button" id="let-me-know-button">Let me know you visited</button>
     </div>
     <!-- <footer>
         <a class="footer-social-media" target="_blank" href="https://github.com/developerstogether">
@@ -53,9 +84,7 @@
             <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Flat_copy"><g><g><path d="M16.005,31.614c-8.615,0-15.625-7.01-15.625-15.625S7.39,0.364,16.005,0.364S31.63,7.374,31.63,15.989     S24.62,31.614,16.005,31.614z" fill="#000"/><path d="M16.005,0.739c8.409,0,15.25,6.841,15.25,15.25s-6.841,15.25-15.25,15.25s-15.25-6.841-15.25-15.25     S7.596,0.739,16.005,0.739 M16.005-0.011c-8.837,0-16,7.163-16,16c0,8.836,7.163,16,16,16s16-7.164,16-16     C32.005,7.153,24.842-0.011,16.005-0.011L16.005-0.011z" fill="#000"/></g></g><path d="M24.299,22.932v-6.137c0-3.288-1.755-4.818-4.096-4.818c-1.889,0-2.735,1.039-3.206,1.768v-1.517h-3.558   c0.047,1.005,0,10.704,0,10.704h3.558v-5.978c0-0.319,0.023-0.639,0.117-0.867c0.257-0.639,0.842-1.301,1.825-1.301   c1.288,0,1.803,0.981,1.803,2.42v5.727L24.299,22.932L24.299,22.932z M9.69,10.767c1.24,0,2.013-0.823,2.013-1.85   c-0.023-1.05-0.773-1.849-1.99-1.849S7.701,7.866,7.701,8.916c0,1.028,0.772,1.85,1.967,1.85H9.69z M11.469,22.932V12.228H7.912   v10.704H11.469z" fill="#f5f5f5"/></g></svg>
         </a>
     </footer> -->
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
     </script>
     <script src="./script/background.js"></script>
@@ -63,7 +92,6 @@
         // $(document).ready(function(){
         // $('body div').last().remove();
         // });
-
     </script>
 </body>
 
